--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,30 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
 body {
     margin: 0;
-    /* font-family: 'Ubuntu', sans-serif; */
-    font-family: "Oak Light", sans-serif;
-    font-weight: lighter;
-    font-style: normal;
-
-
+    font-family: "Oak Bold", sans-serif;
 }
 
-/* .sticky-bar {
+.sticky-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 5%;
-    background-color: white;
+    background-color: #6aaf45;
     text-align: center;
     text-decoration-color: black;
-} */
+}
 
-
+.sticky-bar p {
+    margin: 0;
+    padding: 8px 0;
+}
 
 .navbar {
     display: none;
     position: fixed;
-    top: 0;
+    top: 34px;
     left: 0;
     width: 100%;
     background-color: #ffffff;
@@ -39,7 +33,6 @@ body {
     color: white;
     text-align: center;
     animation: slideDown 0.5s ease-out;
-    /* text-decoration: none; */
 }
 
 .nav a {
@@ -50,17 +43,19 @@ body {
     cursor: pointer;
 }
 
-a:hover {
-    color: blue !important;
+.nav a:hover {
+    color: #077bb7 !important;
 }
 
 .logo img {
-    position: absolute;
+    display: block;
+    position: fixed;
+    top: 30px;
+    left: 0px;
     width: 15%;
     height: auto;
     padding: 10px;
     z-index: 999 !important;
-
 }
 
 @keyframes slideDown {
@@ -76,7 +71,7 @@ a:hover {
 .menu-icon {
     display: block;
     position: fixed;
-    top: 10px;
+    top: 45px;
     right: 10px;
     cursor: pointer;
     z-index: 2;
