--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
     height: 5%;
     background-color: #6aaf45;
     text-align: center;
-    text-decoration-color: black;
+    text-decoration-color: #ffffff;
 }
 
 .sticky-bar p {
@@ -80,7 +80,7 @@ body {
 .menu-icon div {
     width: 30px;
     height: 3px;
-    background-color: #333;
+    background-color: #6aaf45;
     margin: 6px 0;
     transition: 0.4s;
 }
@@ -96,3 +96,8 @@ body {
 .menu-icon.active div:nth-child(3) {
     transform: rotate(45deg) translate(-5px, -6px);
 }
+
+/* @media screen {
+    add karna hai 
+    
+} */
