--- a/css/styles.css
+++ b/css/styles.css
@@ -1,144 +1,172 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap");
 
 body {
-    margin: 0;
-    font-family: "Oak Bold", sans-serif;
+  margin: 0;
+  font-family: "Oak Bold", sans-serif;
 }
 
 .sticky-bar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5%;
-    background-color: #6aaf45;
-    text-align: center;
-    text-decoration-color: black;
-
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  background-color: #6aaf45;
+  text-align: center;
+  text-decoration-color: black;
 }
 
 .sticky-bar p {
-    margin: 0;
-    padding: 8px 0;
-    color: white;
-
+  margin: 0;
+  padding: 8px 0;
+  color: white;
 }
 
 .navbar {
-    display: none;
-    position: fixed;
-    top: 34px;
-    left: 0;
-    width: 100%;
-    background-color: #ffffff;
-    padding: 20px;
-    box-sizing: border-box;
-    color: white;
-    text-align: center;
-    animation: slideDown 0.5s ease-out;
+  display: none;
+  position: fixed;
+  top: 34px;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 20px;
+  box-sizing: border-box;
+  color: white;
+  text-align: center;
+  animation: slideDown 0.5s ease-out;
 }
 
 .nav a {
-    color: #68a943;
-    text-decoration: none;
-    font-size: 1.1rem;
-    padding: 5px 13px;
-    cursor: pointer;
+  color: #68a943;
+  text-decoration: none;
+  font-size: 1.1rem;
+  padding: 5px 13px;
+  cursor: pointer;
 }
 
 .nav a:hover {
-    color: #077bb7 !important;
+  color: #077bb7 !important;
 }
 
 .logo img {
-    display: block;
-    position: fixed;
-    top: 30px;
-    left: 0px;
-    width: 15%;
-    height: auto;
-    padding: 10px;
-    z-index: 999 !important;
+  display: block;
+  position: fixed;
+  top: 30px;
+  left: 0px;
+  width: 15%;
+  height: auto;
+  padding: 10px;
+  z-index: 999 !important;
 }
 
 @keyframes slideDown {
-    from {
-        transform: translateY(-100%);
-    }
+  from {
+    transform: translateY(-100%);
+  }
 
-    to {
-        transform: translateY(0);
-    }
+  to {
+    transform: translateY(0);
+  }
 }
 
 .menu-icon {
-    display: block;
-    position: fixed;
-    top: 45px;
-    right: 10px;
-    cursor: pointer;
-    z-index: 2;
+  display: block;
+  position: fixed;
+  top: 45px;
+  right: 10px;
+  cursor: pointer;
+  z-index: 2;
 }
 
 .menu-icon div {
-    width: 30px;
-    height: 3px;
-    background-color: #6aaf45;
-    margin: 6px 0;
-    transition: 0.4s;
+  width: 30px;
+  height: 3px;
+  background-color: #6aaf45;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 .menu-icon.active div:nth-child(1) {
-    transform: rotate(-45deg) translate(-5px, 6px);
+  transform: rotate(-45deg) translate(-5px, 6px);
 }
 
 .menu-icon.active div:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
 
 .menu-icon.active div:nth-child(3) {
-    transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translate(-5px, -6px);
 }
-
-
 
 /* ============== start about page ===========  */
 .container {
-    margin: 8rem 1rem;
+  margin: 8rem 1rem;
 }
 
-.about p {
-    font-size: 20px;
-    font-weight: bold;
-    color: #6aaf45;
-    padding-bottom: 2px;
-    border-bottom: 2px solid #077bb7;
-    width: fit-content;
-    text-transform: uppercase;
+.heading p {
+  font-size: 20px;
+  font-weight: bold;
+  color: #6aaf45;
+  padding-bottom: 2px;
+  border-bottom: 2px solid #077bb7;
+  width: fit-content;
+  text-transform: uppercase;
+}
+
+.contents p:first-letter {
+  text-transform: uppercase;
+  font-size: 28px;
+  color: #6aaf45;
+}
+
+.contents p {
+  font-size: 17px;
+  font-weight: 600;
+  color: #077bb7;
+}
+
+.contents h3 {
+  font-size: 30px;
+  font-weight: 400;
+  color: gray;
+}
+
+.contents span {
+  color: #6aaf45;
+  font-weight: 600;
 }
 /* ============== end about page =============  */
 
-
 /* for mobile  */
-@media (max-width:480px) {
+@media (max-width: 480px) {
+  .navbar {
+    height: 100vh;
+    background-color: rgb(255, 255, 255);
+  }
+  .nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .nav a {
+    color: #6aaf45;
+    font: size 1em;
+  }
 
-    .nav {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  .sticky-bar {
+    height: inherit;
+  }
 
-    .nav a {
-        color: #6aaf45;
-        font: size 1em;
-    }
+  .logo img {
+    width: 40%;
+    height: auto;
+  }
 
-    .about p {
-       margin: 0 auto;
-    }
-
+  .about p {
+    margin: 0 auto;
+  }
 }
 
 /* for tablet  */
